# tcc-solar-generation

./: .gitignore  CLAUDE.md  README.md  comparacao_incidenciaxhoras.py  gerador_csv_geracao.py  gerador_dados_climaticos.py  linkedin_post.txt  mapa.py  merge_geracao_clima.py  modelo_final.py  pyproject.toml  requirements.txt  setup.py
.code-reviews/: review_20260323_183328.md  review_20260323_184633.md  review_20260323_184929.md
scripts/: predict.py  run_evaluation.py  run_preprocessing.py  run_training.py
src/config/: settings.py
src/data/: base.py  loaders.py  pipeline.py  processors.py
src/data/extractors/: base.py  climate.py  generation.py
src/data/transformers/: base.py  cleaning.py  normalization.py
src/data/validators/: quality_checks.py
src/features/: engineering.py  selection.py
src/models/: base.py  decision_tree.py  evaluator.py  random_forest.py  registry.py  trainer.py
src/utils/: logger.py
src/visualization/: geographic.py  performance.py
tests/: conftest.py  test_config.py  test_extractors.py  test_feature_engineering.py  test_feature_selection.py  test_loaders.py  test_models.py  test_predict.py  test_processors.py  test_registry.py  test_transformers.py  test_validators.py  test_visualization.py
tests/integration/: conftest.py  test_pipeline.py
