[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tcc-solar-generation"
version = "0.1.0"
description = "Previsão de geração fotovoltaica com Machine Learning (TCC - Engenharia Mecânica UFRJ)"
authors = [{ name = "Hugo Kersbaumer Knupp" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "geopy>=2.3.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
